--- a/styles.css
+++ b/styles.css
@@ -16,14 +16,14 @@ body{
 	min-height: 100vh;
 }
 .dashboard{
+	overflow: hidden;
 	display: grid;
-	grid-template-rows: auto 1fr auto;
+	grid-template-rows: auto auto auto;
 	grid-template-areas: "header"
 						 "content"
 						 "footer";
-	width: clamp(320px, 72vw, 1400px);
+	width: clamp(360px, 72vw, 1400px);
 	border-radius: 12px;
-	overflow: hidden;
 	height: fit-content;
 	animation: slide-up forwards 1.2s 0.5s, appear both 1s 0.5s;
 	box-shadow: -6px -6px 2px #291e1c, 6px 6px 2px #000c;
@@ -35,39 +35,39 @@ header{
 	background-color: var(--salmon);
 	color: #fff;
 	position: relative;
-	font-size: clamp(18px, 3.2vw, 50px);
+	font-size: clamp(14px, 2.8vw, 50px);
 }
 header, footer{
 	display: flex;
 	padding: 8px;
 	justify-content: center;
 	align-items: center;
-	width: 100%;
 }
 .content{
 	display: grid;
 	grid-area: content;
-	grid-template-columns: 3fr 14fr;
-	grid-template-areas: "section main";
+	grid-template-columns: auto 1fr;
+	grid-template-areas: "nav main";
 	padding: 6px;
 	gap: 6px;
 }
 a{
-	color: #BF2F1E;
+	color: #AF1F0E;
+	font-weight: 500;
 	text-decoration: none;
 }
-section{
-	grid-area: section;
+nav{
+	grid-area: nav;
 }
-main, section, .dashboard{
+main, nav, .dashboard{
 	background-color: #FEF5F4;
 }
-main, section, .dashboard, h2{
+main, nav, .dashboard, h2{
 	transition: 0.3s;
 }
 main{
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(242px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 	grid-area: main;
 	gap: 70px 20px;
 }
@@ -80,14 +80,14 @@ footer{
 }
 main img{
 	padding: 3px;
-	width: 240px;
+	width: clamp(120px, 20vw, 240px);
 	background-color: var(--salmon);
-	height: 200px;
+	height: clamp(96px, calc(20vw*0.8), 192px);
 	transition: 0.6s;
 	margin: 30px auto;
 }
 h2{
-	font-size: clamp(20px, 2.6vw, 34px);
+	font-size: clamp(14px, 1.9vw, 34px);
 }
 ul{
 	display: flex;
@@ -95,11 +95,12 @@ ul{
 	justify-content: space-evenly;
 	height: 75vh;
 	gap: 3px;
+	padding: 6px 0;
 	list-style: none;
-	font-size: clamp(12px, 2.2vw, 18px);
+	font-size: clamp(13px, 1.8vw, 18px);
 }
-section, main{
-	padding: 4px;
+nav, main{
+	padding: 6px;
 }
 main img:hover{
 	box-shadow: 0 0 12px #E1514099;
@@ -152,7 +153,7 @@ main img:nth-child(odd){
 input[type="checkbox"]{
 	display: none;
 }
-input[type="checkbox"]:checked ~ .dashboard, input[type="checkbox"]:checked ~ .dashboard main, input[type="checkbox"]:checked ~ .dashboard section{
+input[type="checkbox"]:checked ~ .dashboard, input[type="checkbox"]:checked ~ .dashboard main, input[type="checkbox"]:checked ~ .dashboard nav{
 	background-color: #1E1514;
 	color: #FFF;
 }
@@ -160,7 +161,7 @@ input[type="checkbox"]:checked ~ .dashboard a{
 	color: var(--salmon);
 }
 input[type="checkbox"]:checked ~ .dashboard header{
-	background-color: var(--salmon);
+	background-color: #D14130;
 }
 label{
 	background-color: transparent;
@@ -174,7 +175,7 @@ label{
 	right: 7px;
 }
 label:hover{
-	background-color: #BF2F1E;
+	background-color: #CF3F2E;
 }
 label:active{
 	background-color: #fff;
