Fixed lot of bugs

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body{
 	grid-template-areas: "header"
 						 "content"
 						 "footer";
-	width: clamp(240px, 70vw, 1400px);
+	width: clamp(240px, 76vw, 1400px);
 	border-radius: 12px;
 	height: fit-content;
 	animation: slide-up forwards 1.2s 0.5s, appear both 1s 0.5s;
@@ -46,7 +46,7 @@ header, footer{
 .content{
 	display: grid;
 	grid-area: content;
-	grid-template-columns: 17vw auto;
+	grid-template-columns: 19vw auto;
 	grid-template-areas: "nav main";
 	gap: 8px;
 }
@@ -67,13 +67,6 @@ main, nav, .dashboard{
 main, nav, .dashboard, h2{
 	transition: 0.3s;
 }
-main{
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-	grid-area: main;
-	padding: 10px;
-	gap: 70px 25px;
-}
 footer{
 	font-size: clamp(12px, 2.2vw, 32px);
 	color: #fff;
@@ -81,11 +74,18 @@ footer{
 	max-height: 100px;
 	background-color: #000;
 }
+main{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(clamp(120px, 20vw, 280px), 1fr));
+	grid-area: main;
+	padding: 10px;
+	gap: 70px 25px;
+}
 main img{
-	padding: 3px;
-	width: clamp(80px, 20vw, 200px);
 	background-color: var(--salmon);
-	height: clamp(64px, calc(20vw*0.8), 160px);
+	padding: 4px;
+	width: clamp(120px, 20vw, 280px);
+	height: clamp(90px, calc(20vw*0.75), 210px);
 	transition: 0.6s;
 	margin: 30px auto;
 }
@@ -98,8 +98,9 @@ ul{
 	justify-content: space-evenly;
 	height: 75vh;
 	gap: 3px;
+	margin: 6px;
 	list-style: none;
-	font-size: clamp(13px, 1.8vw, 18px);
+	font-size: clamp(13px, 1.7vw, 26px);
 }
 h2, ul{
 	padding: 0.5vw;
@@ -147,7 +148,7 @@ main img:nth-child(odd){
 	animation: move-right forwards 1s 1s, appear both 1s 1s;
 	animation-range: auto;
 }
-@container(max-width: 728px){
+@container(max-width: 335px){
 	main img:nth-child(even), main img:nth-child(odd){
 		animation: move-right forwards 1s 1s, appear both 1s 1s;
 	} 
@@ -188,10 +189,10 @@ label:active{
 		width: clamp(160px, 86vw, 450px);
 	}
 	header{
-		font-size: clamp(9px, 1.7vw, 30px);
+		font-size: clamp(16px, 1.7vw, 30px);
 	}
 	h2{
-		font-size: clamp(9px, 1.7vw, 22px);
+		font-size: clamp(12px, 1.7vw, 22px);
 	}
 	ul{
 		display: flex;
@@ -200,18 +201,11 @@ label:active{
 		height: 75vh;
 		gap: 3px;
 		list-style: none;
-		font-size: clamp(8px, 1.7vw, 18px);
-	}
-	.content{
-		gap: 0;
+		margin: 3px;
+		font-size: clamp(11px, 1.5vw, 18px);
 	}
 	main{
 		padding: 0;
-		grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-	}
-	main img{
-		max-width: 140px;
-		max-height: 112px;
 	}
 	label{
 		top: 0;
@@ -226,5 +220,8 @@ label:active{
 	}
 	label{
 		padding: 2px;
+	}
+	.dashboard{
+		width: clamp(240px, 95vw, 1400px);
 	}
 }
